--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,5 +1,5 @@
-FROM tutum/nginx
-LABEL org.opencontainers.image.authors="Richard Bramley <rabramley@gmail.com>"
+FROM nginx:1.23
+LABEL maintainer="Richard Bramley <rabramley@gmail.com>"
 
-RUN rm /etc/nginx/sites-enabled/default
-ADD sites-enabled/app03 /etc/nginx/sites-enabled/app03
+RUN rm /etc/nginx/conf.d/default.conf
+ADD sites-enabled/ /etc/nginx/conf.d/
